--- a/Coffee_MobileApp/app/src/main/res/layout/welcome_layout.xml
+++ b/Coffee_MobileApp/app/src/main/res/layout/welcome_layout.xml
@@ -52,7 +52,7 @@
         >
 
         <Button
-            android:id="@+id/btn_WelcomLogin"
+            android:id="@+id/btn_login"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
@@ -61,12 +61,13 @@
             android:text="@string/login"
             android:textColor="@color/black"
             app:backgroundTint="@color/colorPrimary"
+            android:onClick="callLoginFromWel"
             android:transitionName="transition_login"
 
             />
 
         <Button
-            android:id="@+id/btn_WelcomRegister"
+            android:id="@+id/btn_signup"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
@@ -75,6 +76,7 @@
             android:text="@string/register"
             android:textColor="@color/black"
             app:backgroundTint="@color/colorPrimary"
+            android:onClick="callSignUpFromWel"
             android:transitionName="transition_signup"/>
 
     </LinearLayout>
