--- a/Coffee_MobileApp/app/src/main/res/layout/displayuser_layout.xml
+++ b/Coffee_MobileApp/app/src/main/res/layout/displayuser_layout.xml
@@ -6,13 +6,12 @@
     android:paddingTop="5dp">
 
     <GridView
-        android:id="@+id/gvStaff"
+        android:id="@+id/gvUser"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="5dp"
         android:verticalSpacing="15dp"
         >
-
     </GridView>
 
 </LinearLayout>
